<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="smartrek">Metropia</string>
    <string name="app_name">Metropia</string>
    <string name="distribution_date">20150904</string>
    <string name="fb_app_id">202039786615562</string>
    <string name="twitter_key">iknmAGcTnig41yV7fEusnw</string>
    <string name="twitter_secret">SnDVqMWPaRjL1KjXUkD6iknj1zvQvxj0910xwxSQE3s</string>
    <string name="ad_unit_id">ca-app-pub-8595980654717941/9900089113</string>

    <!-- General terms -->
    <string name="placeholder">(placeholder)</string>
    <string name="terms_of_use">Metropia Terms of Use</string>
    <string name="agree_terms_of_use">By clicking continue you agree to these terms and conditions</string>
    <string name="sign_up_msg">Sign up today and work collectively to reduce traffic and pollution!</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="zip_code">Zip Code</string>
    <string name="login_logo_subtitle">working together to reduce traffic</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="choose_password">Choose password</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="login">Log In</string>
    <string name="create_account_link_text">Don\'t have an account?</string>
    <string name="osm_contributors">© OpenStreetMap contributors</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in">Sign in with Metropia</string>
    <string name="get_started">Get Started!</string>
    <string name="origin">ORIGIN</string>
    <string name="destination">DESTINATION</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="credits">Credits</string>
    <string name="email">Email address</string>
    <string name="dismiss">Dismiss</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="reserve">Reserve</string>
    <string name="trekpoints">TREKPOINTS</string>
    <string name="add">Add</string>
    <string name="ok">ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_connection">Can\'t connect. Check your network.</string>
    <string name="connection_timeout">The connection to the server has timed out.</string>
    
    <string name="common_datetime_format">MMM dd, yyyy (E) HH:mm:ss</string>
    
    <!-- Tutorial -->
    <string name="tutorial_slide1">Swipe to learn more about avoiding traffic congestion while getting there faster!</string>
    <string name="tutorial_slide2">Load your trip with your departure location and destination</string>
    <string name="tutorial_slide3">Select the best route for your trip</string>
    <string name="tutorial_slide4">Load your route and Metropia will remind you when it\'s time to leave</string>
    <string name="tutorial_slide5">Follow your route and earn Trekpoints you can redeem for epic rewards!</string>
    
    <!-- Trip -->
    <string name="trip_has_expired">Your trip has expired</string>
    <string name="trip_too_early_to_start">Your trip begins in %d minute</string>
    <string name="enter_trip_name">Please enter a trip name.</string>

    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <string name="welcome">welcome to Metropia</string>
    <string name="new_user">create a new account</string>
    <string name="failed_login">Sorry, the username or password you entered is not valid.</string>
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <string name="register">register</string>
    <string name="confirm_password">confirm password</string>
    <string name="register_new_user">new user \n registration</string>
    <string name="back">back</string>
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <string name="whereTo">Plan Trip?</string>
    <string name="date">enter date</string>
    <string name="Go">Go!</string>
    <string name="load_trip">Load trip</string>
    <string name="save_trip">save trip</string>
    <string name="edit_trip">Edit trip</string>
    <string name="here_and_now">here and now</string>
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <string name="departTime">departure time</string>
    <string name="arriveTime">arrival time</string>
    <string name="travelTime">travel time</string>
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->

    <string name="my_coupons">my coupons</string>
    <string name="my_contacts">My Contacts</string>
    <string name="reservations">My Reservations</string>
    <string name="my_credits">My Credits</string>

    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <string name="map_mode">map mode</string>
    <string name="map_view">Map View</string>
    <string name="logout">Log Out</string>
    <string name="satellite_view"> satellite view</string>
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <string name="map_display_settings">map display settings</string>
    <string name="map_display"> Display options </string>
    <string name="time_display">TIME DISPLAY OPTIONS</string>
    <string name="display_arrival_time"> Display arrival time</string>
    <string name="display_travel_time"> Display travel time </string>
    <string name="display_departure_time"> display departure time </string>
    <string name="adjust_time">Adjust time increment</string>
    <string name="five">5 minutes</string>
    <string name="fifteen">15 minutes</string>
    <string name="sixty">60 minutes</string>
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <string name="adjustCouponString">Select your coupon!</string>
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <!-- *************************************************************************************** -->
    <string name="your_coupons">your coupons</string>
    <string name="view">view</string>
    <string name="save_trip_help_message">In order to save a trip, you must select both the origin and the destination address from the favorite address list.</string>
    
    
    <string name="crash_toast_text">Ooooops! I crashed, but a report has been sent to my developer to help fix the issue.</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report.</string>
    <string name="crash_notif_title">CrashTest has crashed.</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_title">Metropia has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">Please describe what you were trying to do.</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>

    <!-- *************************************************************************************** -->
    
    <string name="pull_to_refresh_pull_label">pull to refresh...</string>
    <string name="pull_to_refresh_release_label">release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">loading...</string>
    <string name="pull_to_refresh_tap_label">tap to refresh...</string>
    
    <string name="end_trip">End Trip</string>
    <string name="directions_list">Directions List</string>
    <string name="congratulations">Congratulations!</string>
    <string name="dashboard">Dashboard</string>
    <string name="points_award_share_hint">Show friends you’re earning points for helping solve traffic problems for all!</string>
    <string name="trips_award_share_hint">Show friends you’re helping solve traffic congestion for all!</string>
    <string name="environment_award_share_hint">Let others know you’re reducing emissions and helping improve air quality!</string>
    <string name="donated_award_share_hint">Let friends know you’re helping others with your trekpoints!</string>
    <string name="redemptions_award_share_hint">Let friends know you’re getting gifts for helping reduce congestion!</string>
    
    <string name="splash_page_support_city">Austin, Tucson</string>
    <string name="on_board_page_desc">Let\'s save your \n home and work locations \n to set up your commute!</string>
    <string name="on_board_page_finish_desc">You can edit and add more favorites by selecting any map icon or from within the favorites menu. Now that sign up is complete, you\’ll receive 100 reward points to start! To earn more points simply begin reserving and taking trips.</string>
    
    <string name="reservation_new_user_tip">You have no more schedule trips. \n TIP: You can schedule \n multiple trips in advance \n and they will be listed here</string>
    
    <string name="en_route_desc1">Faster Route Available</string>
    <string name="en_route_desc2">Take this route?</string>
    <string name="en_route_auto_accept">Automatically accept in %s secounds</string>
    <string name="en_route_debug_msg">Original ETA : %1$s, Updated ETA : %2$s, Final ETA : %3$s.</string>
    
    <string name="predictive_destination_tutorial">Been here before, right? Metropia remembers familiar trips and shows a green light bulb for easier reference!</string>
    <string name="calendar_integration_tutorial">Based on the events in your calendar, Metropia will remind you when you should make a reservation to arrive on time.</string>
    
    <string name="passenger_before_ride">Hi, %s. Enjoy the ride.</string>
    <string name="passenger_start_ride">You\’re the passenger. Enjoy the Ride.</string>
    
</resources>