<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
      <item 
    	android:title="@string/my_coupons" 
    	android:id="@+id/mycoupons" 
    	android:enabled="true" 
    	android:visible="true"/> 
       <item 
    	android:title="@string/my_contacts" 
    	android:id="@+id/contacts" 
    	android:enabled="true" 
    	android:visible="true"/> 
       <item 
    	android:title="@string/my_credits" 
    	android:id="@+id/my_credits" 
    	android:enabled="true" 
    	android:visible="true"/> 
       <item 
    	android:title="@string/reservations" 
    	android:id="@+id/reservation" 
    	android:enabled="true" 
    	android:visible="true"/> 
    <item 
    	android:title="@string/settings" 
    	android:id="@+id/menusettings" 
    	android:enabled="true" 
    	android:visible="true">  	
    	<menu>
            <item android:id="@+id/map_display_options"
                  android:title="@string/map_display_settings" />
            <item android:id="@+id/map_mode"
                  android:title="@string/map_mode" />
        </menu>
    </item>
    <item 
    	android:title="@string/more" 
    	android:id="@+id/more" 
    	android:enabled="true" 
    	android:visible="true">
    	<menu>
            <item android:id="@+id/about_option"
                  android:title="@string/about" />   	
            <item android:id="@+id/logout_option"
                  android:title="@string/logout" />
        </menu>
    </item>
</menu>
