<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/refresh"
          android:icon="@android:drawable/ic_menu_rotate"
          android:title="Refresh"
	/>

    <item
        android:id="@+id/route"
        android:enabled="true"
        android:icon="@drawable/route"
        android:title="Plan Trip"
        android:visible="true"/>
    <item
        android:id="@+id/reservation"
        android:enabled="true"
        android:icon="@drawable/reservation"
        android:title="@string/reservations"
        android:visible="true"/>
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"/>
    <!--
    <item
        android:id="@+id/contacts"
        android:enabled="true"
        android:icon="@drawable/contacts"
        android:title="@string/my_contacts"
        android:visible="true"/>
    -->
    <item
        android:id="@+id/map_display_options"
        android:title="@string/settings"/>
    <!--
    <item
        android:id="@+id/about_option"
        android:title="@string/about"/>
    -->
    <item
        android:id="@+id/logout_option"
        android:title="@string/logout"/>
    <item
        android:id="@+id/debug_options"
        android:title="Debug Options"/>

</menu>