<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
 	android:layout_width="match_parent"
  	android:layout_height="match_parent"
  	android:background="@drawable/background">  
	<TextView 
		android:id="@+id/smartrek"
		android:textColor="#FFFFFFFF"
		android:textSize="30dp"
		android:gravity="center_horizontal|center_vertical"
   		android:layout_width="fill_parent" 
   		android:layout_height="wrap_content" 
    	android:text="@string/register_new_user"/>
	<RelativeLayout 
     	android:id="@+id/Section1"
        android:layout_width="fill_parent" 
        android:layout_below="@id/smartrek"
        android:layout_height="wrap_content">
        
        <TextView 
        	android:id="@+id/user_lable"
        	android:layout_width="fill_parent" 
        	android:text="@string/username"
        	android:textSize="20dp"
        	android:gravity="center"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="17dp" 
			android:layout_marginTop="20dp" />
        <EditText
        	android:id="@+id/RegisterUserName"
        	android:layout_width="210dp" 
        	android:layout_alignParentRight="true"
        	android:textSize="10dp"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="17dp" 
			android:layout_marginTop="3dp"
			android:layout_below="@id/user_lable" />
		
		<TextView 
        	android:id="@+id/pwd_lable"
        	android:layout_width="fill_parent" 
        	android:text="@string/password"
        	android:textSize="20dp"
        	android:gravity="center"
        	android:layout_below="@id/RegisterUserName"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="17dp" 
			android:layout_marginTop="10dp" />
        <EditText
        	android:id="@+id/RegisterPwd"
        	android:layout_width="210dp" 
        	android:layout_alignParentRight="true"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="17dp" 
			android:layout_marginTop="3dp"
			android:layout_below="@id/pwd_lable" />
			
		<TextView 
        	android:id="@+id/pwd2_lable"
        	android:layout_width="fill_parent" 
        	android:text="@string/confirm_password"
        	android:textSize="20dp"
        	android:gravity="center"
        	android:layout_below="@id/RegisterPwd"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="17dp" 
			android:layout_marginTop="10dp" />
        <EditText
        	android:id="@+id/RegisterPwd2"
        	android:layout_width="210dp" 
        	android:layout_alignParentRight="true"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="17dp" 
			android:layout_marginTop="3dp"
			android:layout_below="@id/pwd2_lable" />			
    	<Button  
			android:id="@+id/register_button" 
			android:gravity="center" 
			android:text="@string/register" 
			android:layout_below="@id/RegisterPwd2"
			android:layout_height="40dp" 
			android:layout_width="70dp"
			android:layout_alignParentRight="true"
			android:layout_marginRight="17dp" 
			android:layout_marginTop="30dp"/>
	</RelativeLayout>
</LinearLayout>
