<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/LoginLayout"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:padding="10px"
    android:background="@drawable/background">              
    <ImageView
		android:id="@+id/smartrek"
		android:gravity="center_horizontal|center_vertical"
   		android:layout_width="fill_parent"
   		android:paddingTop="15dp" 
   		android:src="@drawable/login_logo"
   		android:layout_height="wrap_content"/>
	<RelativeLayout 
     	android:id="@+id/Section1"
        android:layout_width="fill_parent" 
        android:layout_below="@id/smartrek"
        android:layout_height="wrap_content">
        <TextView 
			android:textColor="#FFFFFFFF"
			android:id="@+id/username_text"
   			android:layout_width="fill_parent" 
   			android:layout_height="wrap_content" 
   			android:paddingTop="15dp"
   			android:paddingBottom="5dp"
   			android:gravity="center"
    		android:text="@string/username"/>  
		<EditText 
			android:id="@+id/username_box" 
			android:layout_below="@id/username_text"
			android:layout_width="190dp"
			android:layout_height="wrap_content" 
	    	android:layout_alignParentRight="true"
	        android:layout_marginRight="20dp" 
		    android:inputType="textPostalAddress">
    		<requestFocus></requestFocus>
		</EditText>
	</RelativeLayout>
<RelativeLayout 
		android:id="@+id/Section2"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/Section1">
	<TextView 
		android:textColor="#FFFFFFFF"
		android:id="@+id/pwd_text"
   		android:layout_width="fill_parent" 
   		android:layout_height="wrap_content" 
   		android:paddingTop="15dp"
   		android:paddingBottom="5dp"
   		android:gravity="center"
   		android:layout_alignParentRight="true"
    	android:text="@string/password"/>
	<EditText 
		android:id="@+id/pwd_box" 
		android:password="true"
		android:layout_below="@id/pwd_text"
		android:layout_width="190dp" 
		android:layout_height="wrap_content" 
		android:layout_alignParentRight="true"
	    android:layout_marginRight="20dp" 
		android:inputType="textPostalAddress"/>
</RelativeLayout>
	<Button  
		android:id="@+id/login_button" 
		android:gravity="center" 
		android:text="@string/login" 
		android:layout_below="@id/Section2"
		android:layout_height="40dp" 
		android:layout_width="70dp"
		android:layout_alignParentRight="true"
		android:layout_marginRight="17dp" 
		android:layout_marginTop="30dp"/>
	<Button  
		android:id="@+id/new_user_button" 
		android:gravity="center" 
		android:text="@string/new_user" 
		android:layout_below="@+id/Section2"
		android:layout_height="40dp" 
		android:layout_width="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_marginRight="17dp" 
		android:layout_marginTop="80dp"/>
	<TextView 
    	android:id="@+id/failed_login"
		android:textColor="#FFFFFFFF"
		android:textSize="15dp"
		android:layout_below="@+id/Section2"
		android:layout_toLeftOf="@+id/login_button"
		android:gravity="center_horizontal|center_vertical"
   		android:layout_width="fill_parent" 
   		android:layout_height="wrap_content" 
    	android:text="@string/failed_login"
    	android:visibility="invisible"
    />
</RelativeLayout>