<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">    

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	   	android:background="@color/gray">
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/origin"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        style="@style/MicroText" />
	
	    <TextView
	        android:id="@+id/textViewOrigin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/placeholder"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        style="@style/MediumText" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="@string/destination"
	        style="@style/MicroText" />
	
	    <TextView
	        android:id="@+id/textViewDestination"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="@string/placeholder"
	        style="@style/MediumText" />
	
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:background="@color/secondary_font"  
	     />
	    
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="DEPARTURE TIME"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        style="@style/MicroText" />
	
	    <TextView
	        android:id="@+id/textViewDepartureTime"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="@string/placeholder"
	        android:lineSpacingMultiplier="1.2"
	        style="@style/MediumText" />
	
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="ESTIMATED ARRIVAL TIME"
	        style="@style/MicroText" />
	
	    <TextView
	        android:id="@+id/textViewArrivalTime"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="@string/placeholder"
	        android:lineSpacingMultiplier="1.2"
	        style="@style/MediumText" />
	    
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="ESTIMATED DURATION"
	        style="@style/MicroText"
	    />
	    
	    <TextView
	        android:id="@+id/textViewDuration"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="@string/placeholder"
	        style="@style/MediumText"
	    />
	
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="2dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
	        android:background="@color/secondary_font"  
	     />
	    
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="@string/trekpoints"
	        style="@style/MicroText" />
	
	    <TextView
	        android:id="@+id/textViewCredits"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="45dp"
	        android:layout_marginRight="45dp"
	        android:text="@string/placeholder"
	        style="@style/MediumText" />
	    
	    <FrameLayout 
	        android:layout_marginTop="10dp"
		    android:layout_marginBottom="15dp"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	
		    <Button
		        android:id="@+id/button_reserve"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="bottom"
		        android:layout_marginLeft="30dp"
		        android:layout_marginRight="30dp"
		        android:text="@string/reserve" 
		        style="@style/NextActionButton"
		    />
	    
	    </FrameLayout>
	
	</LinearLayout>

</ScrollView>